Fix source and description field lenght

--- a/Core/templates/base.html
+++ b/Core/templates/base.html
@@ -22,7 +22,7 @@
         }
         .flash_block{
                 text-align: center;
-                font-size: 16px;
+                font-size: 16px1
                 margin-top:5px;
                 padding-bottom:5px;
                 border-bottom: 6px solid #9313a9;
@@ -44,7 +44,7 @@
 </head>
 <body>
 <div class="font head">
-    API v0.00000
+    API v0.000001
 </div>
 {% with  messages = get_flashed_messages() %}
 {% if messages %}
